--- a/index.html
+++ b/index.html
@@ -93,140 +93,140 @@
         <input type="radio" name="map-radio" value="2" id="map-2">
         <label for="map-2">
           <div class="number">2</div>
-          <div class="abbrevation">AUS</div>
+          <div class="abbrevation">BRN</div>
         </label>
       </li>
       <li>
         <input type="radio" name="map-radio" value="3" id="map-3">
         <label for="map-3">
           <div class="number">3</div>
-          <div class="abbrevation">AUS</div>
+          <div class="abbrevation">PRC</div>
         </label>
       </li>
       <li>
         <input type="radio" name="map-radio" value="4" id="map-4">
         <label for="map-4">
           <div class="number">4</div>
-          <div class="abbrevation">AUS</div>
+          <div class="abbrevation">AZ</div>
         </label>
       </li>
       <li>
         <input type="radio" name="map-radio" value="5" id="map-5">
         <label for="map-5">
           <div class="number">5</div>
-          <div class="abbrevation">AUS</div>
+          <div class="abbrevation">E</div>
         </label>
       </li>
       <li>
         <input type="radio" name="map-radio" value="6" id="map-6">
         <label for="map-6">
           <div class="number">6</div>
-          <div class="abbrevation">AUS</div>
+          <div class="abbrevation">MC</div>
         </label>
       </li>
       <li>
         <input type="radio" name="map-radio" value="7" id="map-7">
         <label for="map-7">
           <div class="number">7</div>
-          <div class="abbrevation">AUS</div>
+          <div class="abbrevation">CDN</div>
         </label>
       </li>
       <li>
         <input type="radio" name="map-radio" value="8" id="map-8">
         <label for="map-8">
           <div class="number">8</div>
-          <div class="abbrevation">AUS</div>
+          <div class="abbrevation">V</div>
         </label>
       </li>
       <li>
         <input type="radio" name="map-radio" value="9" id="map-9">
         <label for="map-9">
           <div class="number">9</div>
-          <div class="abbrevation">AUS</div>
+          <div class="abbrevation">A</div>
         </label>
       </li>
       <li>
         <input type="radio" name="map-radio" value="10" id="map-10">
         <label for="map-10">
           <div class="number">10</div>
-          <div class="abbrevation">AUS</div>
+          <div class="abbrevation">GB</div>
         </label>
       </li>
       <li>
         <input type="radio" name="map-radio" value="11" id="map-11">
         <label for="map-11">
           <div class="number">11</div>
-          <div class="abbrevation">AUS</div>
+          <div class="abbrevation">D</div>
         </label>
       </li>
       <li>
         <input type="radio" name="map-radio" value="12" id="map-12">
         <label for="map-12">
           <div class="number">12</div>
-          <div class="abbrevation">AUS</div>
+          <div class="abbrevation">H</div>
         </label>
       </li>
       <li>
         <input type="radio" name="map-radio" value="13" id="map-13">
         <label for="map-13">
           <div class="number">13</div>
-          <div class="abbrevation">AUS</div>
+          <div class="abbrevation">B</div>
         </label>
       </li>
       <li>
         <input type="radio" name="map-radio" value="14" id="map-14">
         <label for="map-14">
           <div class="number">14</div>
-          <div class="abbrevation">AUS</div>
+          <div class="abbrevation">I</div>
         </label>
       </li>
       <li>
         <input type="radio" name="map-radio" value="15" id="map-15">
         <label for="map-15">
           <div class="number">15</div>
-          <div class="abbrevation">AUS</div>
+          <div class="abbrevation">SGB</div>
         </label>
       </li>
       <li>
         <input type="radio" name="map-radio" value="16" id="map-16">
         <label for="map-16">
           <div class="number">16</div>
-          <div class="abbrevation">AUS</div>
+          <div class="abbrevation">RUS</div>
         </label>
       </li>
       <li>
         <input type="radio" name="map-radio" value="17" id="map-17">
         <label for="map-17">
           <div class="number">17</div>
-          <div class="abbrevation">AUS</div>
+          <div class="abbrevation">J</div>
         </label>
       </li>
       <li>
         <input type="radio" name="map-radio" value="18" id="map-18">
         <label for="map-18">
           <div class="number">18</div>
-          <div class="abbrevation">AUS</div>
+          <div class="abbrevation">MEX</div>
         </label>
       </li>
       <li>
         <input type="radio" name="map-radio" value="19" id="map-19">
         <label for="map-19">
           <div class="number">19</div>
-          <div class="abbrevation">AUS</div>
+          <div class="abbrevation">USA</div>
         </label>
       </li>
       <li>
         <input type="radio" name="map-radio" value="20" id="map-20">
         <label for="map-20">
           <div class="number">20</div>
-          <div class="abbrevation">AUS</div>
+          <div class="abbrevation">BR</div>
         </label>
       </li>
       <li>
         <input type="radio" name="map-radio" value="21" id="map-21">
         <label for="map-21">
           <div class="number">21</div>
-          <div class="abbrevation">AUS</div>
+          <div class="abbrevation">UAE</div>
         </label>
       </li>
     </ul>
