--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Forma 1</title>
-  <link href="https://fonts.googleapis.com/css?family=Raleway:300,500,600" rel="stylesheet"> 
+  <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,600" rel="stylesheet"> 
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="container">
     <div>
-      <h1>Forma-1 versenynaptár - 2019</h1>
+      <h1>Forma 1 versenynaptár - <span>2019</span></h1>
       <ul class="image-container">
         <li class="map-image-1 hover">
           <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1000 585"><defs><style>.cls-1{fill:none;stroke:#000;stroke-linecap:round;stroke-linejoin:round;stroke-width:4px;}</style></defs><title>forma_1_2019</title><path class="cls-1" d="M106.69,388.72c-5.61,8.84,4.09,15.17,9.78,17.38,83.14,32.4,154,38.74,219.59,40.68,28.58.84,44.48,19.29,55.57,49.7,2,5.42,5.17,6.43,11.59,6.25l340.2,3.33C767,505.72,768.15,486,768.36,479c.51-16.61-2.72-25.89-3.1-30.73s-2.26-14,11-10.9l77.51,20.45c13.81,4.17,29-7.66,33.08-17.19l28-73.25c5.59-13.89,2.19-19.21-5.71-23.75l-97-51.17c-20-12.42-38.7-16-56.6-15.57-15.54.34-75.8,6.37-93,6.85-9.11.26-16.68,2.51-23.54,11.95A182.92,182.92,0,0,1,621.36,316c-4.72,4.52-10.06,9.21-18.49,11-18.37,4-35.24,2.66-46.67,3.4-47.39,3.05-99.13-8.83-135.92-57.85-14-18.61-30.85-46.53-36.22-56.19-6.91-12.42-12-35.5-2.68-50.62,2.26-3.68,1.18-8.3-3.4-11.37l-75.3-57.93c-36.78-23.65-71.47-23.18-100.89.22-17.2,13.68-26.59,15.85-46.33,13.92-8-.78-12.61,3.89-15.9,13-5.38,14.85-7.42,22.12-12,33.24C122,170.13,115.68,176,104.87,191,99,199.17,95,212.89,90.05,228.18c-2.46,7.67-4.31,21.59-7,35.57-2.21,11.36,1.72,20,6.22,24.31a127.72,127.72,0,0,0,21.3,16.26c6.44,4,16.19,13.36,20.38,16.7s12,12.17,1.86,26.86Z"/></svg>
@@ -100,11 +100,16 @@
       </ul>
     </div>
     <div>
-      <ul class="inline race">
-        <li class="race-name">Ausztrál Nagydíj</li>
-        <li class="race-city">Melbourne</li>
-        <li class="race-date">március 17.</li>
-      </ul>
+      <div class="details">
+        <ul class="inline race">
+          <li class="race-name">Ausztrál Nagydíj</li>
+          <li class="race-city">Melbourne</li>
+          <li class="race-date">március 17.</li>
+        </ul>
+        <div class="call-to-action">
+          <img src="images/arrow.svg" alt="nyíl"><span>Húzd végig az egeret és kattints!</span>
+        </div>
+      </div>
       <ul class="inline map-radios">
         <li>
           <input type="radio" name="map-radio" value="1" id="map-1">
@@ -256,6 +261,27 @@
       </ul>
     </div>
   </div>
+  <footer>
+    <div class="container inline">
+      <a href="https://atlo.team" rel="noopener">
+        <img src="images/atlo.svg" alt="Átló logó">
+      </a>
+      <ul>
+        <li>
+          <strong>forrás: </strong> <a href="maxf1.net" target="_blank" rel="noopener">maxf1.net</a>
+        </li>
+        <li>
+          <strong>grafika: </strong> Mikola Bence
+        </li>
+        <li>
+          <strong>fejlesztés: </strong> Horváth László
+        </li>
+        <li>
+          <strong>kapcsolat: </strong> <a href="mailto:info@atlo.team">info@atlo.team</a>
+        </li>
+      </ul>
+    </div>
+  </footer>
   <script src="script.js"></script>
 </body>
 </html>
