--- a/index.html
+++ b/index.html
@@ -4,7 +4,20 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Forma 1</title>
+  <title>Forma 1 versenynaptár - 2019</title>
+  <!-- OPENGRAPH SHARE -->
+  <meta property="og:type" content="article">
+  <meta property="og:url" content="https://atlo.team/bekamerazott-budapest">
+  <meta property="og:title" content="Forma 1 versenynaptár - 2019">
+  <meta property="og:locale" content="hu_HU">
+  <meta property="og:image" content="https://atlo.team/forma-1/images/share/facebook.jpg">
+  <meta property="article:publisher" content="https://www.facebook.com/atloteam/">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:site" content="@AtloTeam">
+  <meta name="twitter:image" content="https://atlo.team/forma-1/images/share/twitter.jpg">
+  <meta property="fb:app_id" content="345585816190715">
+  <meta property="og:description" content="">
+  <meta name="description" content="">
   <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,600" rel="stylesheet"> 
   <link rel="stylesheet" href="style.css">
 </head>
