meta title and description updated

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <!-- OPENGRAPH SHARE -->
   <meta property="og:type" content="article">
   <meta property="og:url" content="https://atlo.team/forma-1-versenynaptar-2019/">
-  <meta property="og:title" content="Forma 1 versenynaptár - 2019">
+  <meta property="og:title" content="Forma 1 versenynaptár">
   <meta property="og:locale" content="hu_HU">
   <meta property="og:image" content="https://atlo.team/forma-1-versenynaptar-2019/images/facebook.jpg">
   <meta property="article:publisher" content="https://www.facebook.com/atloteam/">
@@ -16,8 +16,8 @@
   <meta name="twitter:site" content="@AtloTeam">
   <meta name="twitter:image" content="https://atlo.team/forma-1-versenynaptar-2019/images/twitter.jpg">
   <meta property="fb:app_id" content="345585816190715">
-  <meta property="og:description" content="">
-  <meta name="description" content="">
+  <meta property="og:description" content="Melyik a leggyorsabb pálya? Mikor lesz a mogyoródi futam? A 2019-es szezon időpontjai és pályái.">
+  <meta name="description" content="Melyik a leggyorsabb pálya? Mikor lesz a mogyoródi futam? A 2019-es szezon időpontjai és pályái.">
   <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,600" rel="stylesheet"> 
   <link rel="stylesheet" href="style.css">
 </head>
