--- a/index.html
+++ b/index.html
@@ -296,5 +296,34 @@
     </div>
   </footer>
   <script src="script.js"></script>
+  <!-- Global Site Tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=GA_TRACKING_ID"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-48920123-31');
+  </script>
+  <script>
+    window.addEventListener("load", function(){
+    window.cookieconsent.initialise({
+      "palette": {
+        "popup": {
+          "background": "#edeff5",
+          "text": "#838391"
+        },
+        "button": {
+          "background": "#4b81e8"
+        }
+      },
+      "content": {
+        "message": "Az oldal sütiket (cookie) használ. Tudj meg többet az adatvédelmi irányelveinkről az ",
+        "dismiss": "Elfogadom",
+        "link": "alábbi linken.",
+        "href": "https://atlo.team/jogi-nyilatkozat"
+      }
+    })});
+  </script>
 </body>
 </html>
